# oxipng-pybind

./: .gitignore  .gitlint  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  LICENSE  Makefile  PYPI-DESCRIPTION.md  README.md  THIRD_PARTY_NOTICES.md  deny.toml  oxipng.pyi  pyproject.toml
.github/workflows/: api-matrix.yml  ci.yml  dependency-health.yml  release-tag.yml  retry-failed-checks.yml  upstream-bump.yml  wheels.yml
docs/: README.md  security-code-review-report-2026-05-26.md
docs/api-surface/: oxipng-10.1.1.toml
docs/architecture/: api-compatibility.md  options-surface.md  overview.md  test-architecture.md
docs/archive/: README.md
docs/archive/specs/: 2026-05-25-api-and-wheels-design.md  2026-05-26-api-options-memory-design.md
docs/archive/superpowers/plans/: 2026-05-26-active-docs-clarity-rewrite.md  2026-05-26-pyoxipng-compatibility.md  2026-05-26-review-findings-fix-plan.md  2026-05-26-upstream-surface-promotion.md
docs/archive/superpowers/specs/: 2026-05-26-active-docs-clarity-design.md  2026-05-26-pyoxipng-compatibility-design.md  2026-05-26-upstream-surface-promotion-design.md
docs/conventions/: lint-deviations.md
docs/plans/: 2026-05-26-api-wheels-surface.md  2026-05-26-python-matrix-and-overview.md  2026-05-26-remaining-work-and-pyoxipng-gaps.md  2026-05-28-test-architecture-overhaul-design.md  2026-05-28-test-architecture-overhaul-implementation.md  full-code-review-report.md  major-review-fixes-plan.md  medium-review-fixes-plan.md  minor-review-fixes-plan.md  unfinished-work.md
docs/process/: dependency-health.md  github-settings.md  lint-deviations.md  local-development.md  manual-release.md  release-artifacts.md  upstream-bumps.md  writing-style.md
docs/specs/: 2026-05-25-api-and-wheels-design.md  2026-05-26-api-options-memory-design.md  2026-05-26-upstream-surface-scan-design.md  2026-05-26-wheel-artifacts-design.md
docs/superpowers/plans/: 2026-05-26-active-docs-clarity-rewrite.md  2026-05-26-docstring-lint-policy.md  2026-05-26-pyoxipng-compatibility.md  2026-05-26-review-findings-fix-plan.md  2026-05-26-security-review-fixes.md  2026-05-26-strict-ci-dependency-health.md  2026-05-26-upstream-surface-promotion.md  2026-05-26-wrapper-versioning.md  2026-05-27-next-work.md  2026-05-27-release-tag-gates-and-automation.md
docs/superpowers/specs/: 2026-05-26-active-docs-clarity-design.md  2026-05-26-pyoxipng-compatibility-design.md  2026-05-26-upstream-surface-promotion-design.md
docs/usage/: build-from-source.md  file-optimization.md  memory-optimization.md  pyoxipng-migration.md  raw-image.md  standard-ebooks.md  untrusted-input.md
oxipng/: __init__.py  __init__.pyi  _pyoxipng_compat.py
scripts/: __init__.py  _toml_compat.py  ai-filter-log.py  ai_filter_log.py  audit_dependency_overrides.py  audit_github_settings.py  bump_upstream.py  check_wheel_tags.py  classify_dependency_refresh.py  generate_third_party_notices.py  scan_upstream_surface.py  smoke_wheel.py  update_github_actions.py  validate_release_tag.py  verify_release_artifacts.py  verify_release_checks.py  verify_release_version.py
src/: lib.rs
tests/: conftest.py  test_ai_filter_log.py  test_api.py  test_api_surface.py  test_audit_dependency_overrides.py  test_bump_upstream.py  test_dependency_refresh_classification.py  test_docs_examples.py  test_github_settings_audit.py  test_helpers_automation.py  test_helpers_png.py  test_helpers_warnings.py  test_helpers_workflows.py  test_makefile.py  test_optimize_file_api.py  test_optimize_memory_api.py  test_option_validation.py  test_packaging_metadata.py  test_pylint_consumers.py  test_pyoxipng_compat.py  test_raw_image_api.py  test_real_pngs.py  test_release_artifacts.py  test_release_checks.py  test_release_version.py  test_scan_upstream_surface.py  test_scripts.py  test_smoke_wheel.py  test_third_party_notices.py  test_update_github_actions.py  test_validate_release_tag.py  test_wheel_tags.py  test_workflow_automation_policy.py  test_workflow_release_policy.py  test_workflow_security.py  test_workflows.py  typing_filter_options.py
tests/helpers/: artifacts.py  automation.py  png.py  warnings.py  workflows.py
tests/typecheck/: typing_filter_options.py
