[package]
name = "se-pyoxipng"
version = "10.1.1"
edition = "2021"
license = "MIT"
description = "Focused Python wrapper for oxipng"
repository = "https://github.com/ConcaveTrillion/se-pyoxipng"
rust-version = "1.85.1"

[lib]
name = "_oxipng"
crate-type = ["cdylib", "rlib"]

[dependencies]
oxi = { package = "oxipng", version = "=10.1.1", default-features = false, features = ["parallel", "zopfli"] }
pyo3 = { version = "0.25.1", features = ["extension-module"] }

[profile.release]
lto = "fat"
strip = "symbols"
