[package]
name = "oxipng-pybind"
version = "10.1.1"
edition = "2021"
license = "Unlicense"
description = "Focused Python wrapper for oxipng"
repository = "https://github.com/pdomain/oxipng-pybind"
rust-version = "1.85.1"

[lib]
name = "_oxipng"
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = "2.14.0"
oxi = { package = "oxipng", version = "=10.1.1", default-features = false, features = ["parallel", "zopfli"] }
pyo3 = { version = "0.29.0", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = { version = "0.29.0", features = ["resolve-config"] }

[features]
default = ["abi3-py310"]
abi3-py310 = ["pyo3/abi3-py310"]
abi3-py311 = ["pyo3/abi3-py311"]

[profile.release]
lto = "fat"
strip = "symbols"
