[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "oxipng-pybind"
version = "10.1.1"
description = "Focused Python wrapper for oxipng."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "ConcaveTrillion", email = "ConcaveTrillion@gmail.com" },
]
keywords = ["png", "optimizer", "oxipng"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Repository = "https://github.com/ConcaveTrillion/oxipng-pybind"
Issues = "https://github.com/ConcaveTrillion/oxipng-pybind/issues"
Upstream = "https://github.com/oxipng/oxipng"

[dependency-groups]
test = [
    "pillow>=10.0",
    "pytest>=8.4",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.6",
]
lint = [
    "basedpyright>=1.39.4",
    "gitlint>=0.19.1",
    "pre-commit>=4.3",
    "ruff>=0.13",
]
build = [
    "maturin>=1.8,<2.0",
]
automation = [
    "tomlkit>=0.13",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "build" },
    { include-group = "automation" },
]

[tool.maturin]
module-name = "_oxipng"
features = ["pyo3/extension-module"]
python-packages = ["oxipng"]
include = [
    { path = "oxipng/__init__.pyi", format = ["wheel"] },
    { path = "oxipng/py.typed", format = ["wheel"] },
]
strip = true

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "BLE",
    "C4",
    "D",
    "E",
    "ERA",
    "F",
    "G",
    "I",
    "LOG",
    "N",
    "PERF",
    "PL",
    "PT",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "COM812", # Formatter owns trailing-comma layout; recommended by Ruff formatter docs.
    "D100", # Public package/module docs live in README/docs; file-level docstrings add noise here.
    "D104", # Package docs live in README/docs; __init__ exports are documented by stubs.
    "D107", # __init__ behavior is covered by class/function docs and type stubs.
    "D203", # Incompatible with D211; Google docstring convention uses D211.
    "D212", # Incompatible with D213; Google docstring convention uses D213.
    "E501", # Ruff formatter owns line wrapping; long literals and URLs stay readable.
    "TRY003", # Small wrapper errors are clearer inline than as single-use custom exception classes.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use asserts, fixtures, magic sample values, and descriptive test names
# instead of production-style docstrings and full annotations.
"tests/**/*.py" = ["ANN", "D", "PLR2004", "S101", "S108"]
# Helper scripts are small command-line tools: docs live in command/help text, subprocess and
# URL calls are the intended behavior, and printing is their CLI interface.
"scripts/*.py" = ["D", "S310", "S603", "T201"]

[tool.basedpyright]
include = ["oxipng", "tests", "scripts"]
exclude = ["**/__pycache__", "**/.venv", "target"]
typeCheckingMode = "recommended"
failOnWarnings = true
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
# These remain disabled because the wrapper scripts parse dynamic JSON/TOML and many tests call
# constructors only to assert validation errors. Narrowing every fixture and assigning every
# intentionally unused return would make the tests less readable without improving API safety.
reportAny = "none"
reportExplicitAny = "none"
reportUnusedCallResult = "none"
